err/metrique-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './jsonconf'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/bson-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/jsonconf'...
Compiling './lib/python3.5/site-packages/jsonconf/jsonconf.py'...
***   File "./lib/python3.5/site-packages/jsonconf/jsonconf.py", line 133
    print '\n(Press ENTER to use current: %s)' % x_opt
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonconf-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/metrique'...
Listing './lib/python3.5/site-packages/metrique/server'...
Listing './lib/python3.5/site-packages/metrique/server/mongodb'...
Compiling './lib/python3.5/site-packages/metrique/server/mongodb/test_performance_MongoDB.py'...
***   File "./lib/python3.5/site-packages/metrique/server/mongodb/test_performance_MongoDB.py", line 182
    print "name" + (14 * ' ') + "actual  act(av)   prev    prev(av)  best    best(av)  worst   worst(av)"
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metrique/server/tornado'...
Listing './lib/python3.5/site-packages/metrique_server-0.1.3a27.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pql'...
Listing './lib/python3.5/site-packages/pql-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
